--- a/airwrite/templates/airwrite/modules/abecedario.html
+++ b/airwrite/templates/airwrite/modules/abecedario.html
@@ -29,12 +29,12 @@
     </div>
     
     <a href="{% url 'tienda' %}" class="cart-container">
-  <svg class="cart-icon" width="24" height="24" viewBox="0 0 24 24" fill="none">
-    <path d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" stroke="#3B9EFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-  </svg>
-  <span class="cart-text">Tienda</span>
-</a>
-
+      <svg class="cart-icon" width="24" height="24" viewBox="0 0 24 24" fill="none">
+        <path d="M3 3h2l.4 2M7 13h10l4-8H5.4M7 13L5.4 5M7 13l-2.293 2.293c-.63.63-.184 1.707.707 1.707H17m0 0a2 2 0 100 4 2 2 0 000-4zm-8 2a2 2 0 11-4 0 2 2 0 014 0z" 
+              stroke="#3B9EFF" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+      </svg>
+      <span class="cart-text">Tienda</span>
+    </a>
   </header>
 
   <!-- Main Content -->
@@ -56,6 +56,10 @@
     </section>
   </main>
 
+  <!-- Pasar datos del contexto Django a JavaScript -->
+  {{ modules|json_script:"modules-data" }}
+
+  <!-- Script principal -->
   <script src="{% static 'airwrite/js/abecedario.js' %}"></script>
 </body>
 </html>
