--- a/airwrite/templates/airwrite/auth/login.html
+++ b/airwrite/templates/airwrite/auth/login.html
@@ -149,7 +149,7 @@
       <!-- GIF 1 - Mantiene el static de Django -->
       <img class="output" src="{% static 'airwrite/img/VectorPrincipalAnimado.gif' %}" alt="Vector Principal" />
       
-      <p class="bienvenido-al-blog" id="welcomeText">Bienvenido al blog de notas<br />donde las ideas flotan!</p>
+      <p class="bienvenido-al-blog" id="welcomeText">Bienvenido a AirWrite <br />donde aprender es divertido</p>
       <div class="ellipse-2"></div>
       
       <!-- GIF 2 - Mantiene el static de Django -->
