--- a/airwrite/templates/airwrite/home/home.html
+++ b/airwrite/templates/airwrite/home/home.html
@@ -117,7 +117,7 @@
       </nav>
 
       <div class="sidebar-footer">
-        <img src="{% static 'airwrite/img/niñosNav.png' %}" alt="Letra-home" class="sidebar-image" />
+        <img src="{% static 'airwrite/img/output-onlinegiftools (5).gif' %}" alt="Letra-home" class="sidebar-image" />
       </div>
     </aside>
 
