--- a/airwrite/templates/airwrite/modules/abecedario.html
+++ b/airwrite/templates/airwrite/modules/abecedario.html
@@ -6,6 +6,7 @@
   <title>ABECEDARIO - AIRWRITE SOFT</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
   {% load static %}
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <link rel="stylesheet" href="{% static 'airwrite/css/abecedario.css' %}">
 </head>
 <body>
